--- a/iff/values.yaml
+++ b/iff/values.yaml
@@ -5,37 +5,10 @@ mqtt:
     capacity: 1
     discoveryDetails:
       # discoveryUrls is a list of DiscoveryUrls for OPC UA servers
-      mqttBrokerUri: "mqtt://192.168.49.26:1883"
+      mqttBrokerUri: "192.168.49.26:1883"
       topics:
         - "airtracker-74145/relay1"
       timeoutSeconds: 5
-
-
-opcua:
-  configuration:
-    enabled: true
-    name: akri-opcua
-    capacity: 1
-    discoveryDetails:
-      # discoveryUrls is a list of DiscoveryUrls for OPC UA servers
-      discoveryUrls:
-        - "opc.tcp://192.168.49.151:4840"
-        - "opc.tcp://192.168.49.198:62548"
-        - "opc.tcp://192.168.49.197:62548"
-        - "opc.tcp://192.168.49.173:62548"
-        - "opc.tcp://192.168.49.196:62548"
-        - "opc.tcp://192.168.49.195:62548"
-        - "opc.tcp://192.168.49.194:62548"
-        - "opc.tcp://192.168.49.193:62548"
-        - "opc.tcp://192.168.49.192:62548"
-        - "opc.tcp://192.168.49.172:62548"
-        - "opc.tcp://192.168.49.191:62548"
-        - "opc.tcp://192.168.49.190:62548"
-        - "opc.tcp://192.168.49.171:62548"
-
-      applicationNames:
-        action: Include
-        items: ["SIMATIC.S7-1200.OPC-UA.Application:PLC_1"]
 
 crds:
   group: akri.sh
