--- a/akri/fleet.yaml
+++ b/akri/fleet.yaml
@@ -13,17 +13,9 @@ helm:
     useLatestContainers: true
     useDevelopmentContainers: true
     kubernetesDistro: k3s
+    opcua:
+      discovery:
+        enabled: true
     controller:
       # enabled defines whether to apply the Akri Controller
       enabled: false
-    custom:
-      discovery:
-        enabled: true
-        image: 
-          repository: ibn40/akri-mqtt-discovery-handler
-          tag: iff
-        name: akri-mqtt-discovery
-      configuration:
-        enabled: true
-        name: akri-mqtt
-        discoveryHandlerName: mqtt
